# ChessAnalyzerQtWidgets

./: .gitignore  CMakeLists.txt  README.md  assets.qrc  benchmarkingcard.cpp  benchmarkingcard.h  cardwidget.cpp  cardwidget.h  clutchperformancecard.cpp  clutchperformancecard.h  connectionerrorwidget.cpp  endgameanalysiscard.cpp  endgameanalysiscard.h  formmainpagewidget.h  formmainpagewidget.ui  gamephasequalitycard.cpp  gamephasequalitycard.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metricscard.cpp  metricscard.h  openingpatternscard.cpp  openingpatternscard.h  playercardwidget.cpp  playerpendingcardwidget.cpp  resumenanalisiscard.cpp  resumenanalisiscard.h  riskfactorscard.cpp  riskfactorscard.h  roianalysiscard.cpp  roianalysiscard.h  tacticalanalysiscard.cpp  tacticalanalysiscard.h  timemanagementcard.cpp  timemanagementcard.h  trendscard.cpp  (+1 more)
.history/: CMakeLists_20250708211746.txt  CMakeLists_20250709074532.txt  CMakeLists_20250709092314.txt  CMakeLists_20250709103325.txt  CMakeLists_20250709111702.txt  CMakeLists_20250709120013.txt  chessanalyzerclient_20250709102505.h  chessanalyzerclient_20250709103310.h  chessanalyzerclient_20250709105526.h  connectionerrorwidget_20250709074449.h  connectionerrorwidget_20250709153047.cpp  formmainpagewidget_20250708214957.cpp  formmainpagewidget_20250709074542.h  formmainpagewidget_20250709074558.cpp  formmainpagewidget_20250709074618.h  formmainpagewidget_20250709093832.cpp  formmainpagewidget_20250709111623.h  formmainpagewidget_20250709111654.cpp  formmainpagewidget_20250709112359.h  formmainpagewidget_20250709112423.cpp  formmainpagewidget_20250709115857.cpp  formmainpagewidget_20250709115931.cpp  formmainpagewidget_20250709153349.h  formmainpagewidget_20250709153402.cpp  formmainpagewidget_20250709155518.h  formmainpagewidget_20250709155609.cpp  formmainpagewidget_20250709155633.cpp  formmainpagewidget_20250709155646.cpp  formmainpagewidget_20250709161431.cpp  formmainpagewidget_20250709223924.cpp  formmainpagewidget_20250709224545.cpp  main_20250709103335.cpp  main_20250709103343.cpp  main_20250709104631.cpp  main_20250709105555.cpp  playercardwidget_20250709111522.h  playerpendingcardwidget_20250709115553.h  playerpendingcardwidget_20250709115817.cpp  playerpendingcardwidget_20250709155429.h  serverstatusmanager_20250709103239.h  (+16 more)
